@@ -1,4 +1,8 @@
-﻿drkns 01.03.2015 02:12:37 +0200 - build 4282
+﻿zg 01.03.2015 13:12:22 +0200 - build 4283
+
+1. 0002956: Падение Фара на старте после выхода с панелью быстрого просмотра.
+
+drkns 01.03.2015 02:12:37 +0200 - build 4282
 
 1. Уточнение 4280.2.
 
